--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -12,6 +12,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "noImplicitAny": false,
+    "allowJs": true,
     "types": [
       "webpack-env"
     ],
